[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/BaseMenuPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Match 3 Assets/UI/godot match 3 settings bar.png" type="Texture" id=2]
[ext_resource path="res://Assets/Match 3 Assets/UI/Buttons/Sound On Button.png" type="Texture" id=3]
[ext_resource path="res://Assets/Match 3 Assets/UI/Buttons/Back Button.png" type="Texture" id=4]
[ext_resource path="res://Assets/Match 3 Assets/UI/Backgrounds/background 2.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Settings.gd" type="Script" id=6]
[ext_resource path="res://Assets/Match 3 Assets/UI/Buttons/Sound Off Button.png" type="Texture" id=7]

[node name="Settings" instance=ExtResource( 1 )]
script = ExtResource( 6 )
sound_on = ExtResource( 3 )
sound_off = ExtResource( 7 )

[node name="Background" type="TextureRect" parent="." index="0"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Graphic" parent="MarginContainer/Graphic and Buttons" index="0"]
margin_bottom = 488.0
rect_min_size = Vector2( 488, 488 )
texture = ExtResource( 2 )
expand = true

[node name="Buttons" parent="MarginContainer/Graphic and Buttons" index="1"]
margin_top = 518.0
margin_bottom = 922.0

[node name="Button1" parent="MarginContainer/Graphic and Buttons/Buttons" index="0"]
margin_bottom = 256.0
rect_min_size = Vector2( 512, 256 )
texture_normal = ExtResource( 3 )
expand = true
stretch_mode = 5

[node name="Button2" parent="MarginContainer/Graphic and Buttons/Buttons" index="1"]
margin_top = 276.0
margin_bottom = 404.0
rect_min_size = Vector2( 512, 128 )
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 5
[connection signal="pressed" from="MarginContainer/Graphic and Buttons/Buttons/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="MarginContainer/Graphic and Buttons/Buttons/Button2" to="." method="_on_Button2_pressed"]
